2010-08-31  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.3 release procedure:
 	Changes since nco-4_0_2: nco_cnv_ccm_ccsm_cf_date() bug, better configure
	cd ~/nco;cvs tag -d nco-4_0_3;cvs tag -d nco-4_0_3-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.3 release"
	cvs tag -c nco-4_0_3;cvs tag -c nco-4_0_3-1

	* Document TODO nco986, clean up ncbo.c patch

2010-08-30  Charlie Zender  <zender@uci.edu>

	* Document TODO nco986, an ncbo bug exposed by AIX xlC compilers. No fix yet.

	* Clean-up nco_cal.c

2010-08-09  Charlie Zender  <zender@uci.edu>

	* NCO fails dpkg-buildpackage configure-build with shared netCDF4 in /usr/local
	This may be expected and OK because buildpackage checks, with
	dh_shlibdeps, that shared library dependencies are resolvable
	within the dpkg universe which does not include /usr/local.
	Thus, this builpackage problem may vanish with netCDF .debs
	that include libnetCDF4.so.

	* NCO seems to configure-build fine with shared netCDF4 in /usr/local

	* Finally built recent netCDF with shared libs in /usr/local to
	facilitate testing NCO configure mechanism with shared libs.

	* Relax configure rule that netCDF4 must be built static

2010-08-05  Charlie Zender  <zender@uci.edu>

	* Revised M4 definition of NCO_CHECK_FUNCS provided by Eric Blake of RedHat

	* NB: configure is currently broken due to NCO_CHECK_FUNCS m4 macro

	* Make ncks --data synonymous with ncks -H

2010-07-29  Charlie Zender  <zender@uci.edu>

	* Ensure CPP validity of NCO_CHECK_FUNCS tokens with AS_TR_CPP

	* Add whitespace to clarify conditional #include config.h, getopt.h and nco_getopt.h

	* Look for udunits2.xml in /usr/local/share/udunits/

	* Correct nco_getopt.[ch] handling by autotools

	* Using M4 definition of NCO_CHECK_FUNCS provided by Eric Blake of RedHat

2010-07-28  Charlie Zender  <zender@uci.edu>

	* Allow DEB_BUILD_OPTIONS to Debian rules for netCDF4/UDUnits2

	* Fix compiler error warning initialization (CEWI) problems in nco_cln_utl.c
