@@ -1,4 +1,4 @@
-$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1074 2010-08-31 04:42:13 zender Exp $ 
+$Header: /data/zender/nco_20150216/nco/doc/TODO,v 1.1075 2010-08-31 19:03:27 zender Exp $ 
 
 # Purpose: TODO items for NCO
 
@@ -665,7 +665,6 @@ nco960. Warn when attempted hyperslab on 2-D (or more) coordinates, e.g., https:
 nco964. nco: fsync()?
 nco966. ncap2 failure on silt (and only silt!:
         ncap2 -O -v -S /home/scapps/qscat/scripts/wnd_pfl/ncap2_wblpwr_truncated.nco /home/scapps/qscat/scripts/wnd_pfl/test.nc ~/out.nc
-nco968. ncbo -t 1 -D 5 -O --op_typ='-' -v mss_val_scl -p ~/nco/data in.nc in.nc ~/foo.nc
 nco969. nco: do not automatically try wget when DAP access fails ?
 nco970. nco: do not create really long paths with (especially failed) wget attempts
 nco971. wget: both following commands create and write mutilated directory
@@ -687,18 +686,6 @@ nco979. UDUnits1: time zone at end of user-specified limit string is ignored (ba
 nco980. UDUnits: offsets/scalefactors in re-basing to handle differences between files like  "hours since 1965-010-01 12:00" and "minutes  since 1968-02-01 12:32"
 nco983. change default to netcdf3 64bit? or compile-time option to do so?
 nco984. remove makeinfo dependency trigger from nco configure build
-nco986. nco: aix bluefire ncbo bug:
-      ncbo -O -D 5 -p ~/nco/data in.nc in.nc ~/foo.nc
-      ncbo: ERROR nco_malloc() unable to allocate 7885078833219502080 bytes
-      where
-      nco_exit(rcd = 150999040), line 488 in "nco_ctl.c"
-      nco_malloc@AF12_3(??), line 90 in "nco_mmr.c"
-      nco_msa_rec_clc(dpt_crr = 0, dpt_crr_max = 0, lmt = (nil), lmt_lst = (nil), vara = 0x000000010056db30), line 149 in "nco_msa.c"
-      nco_msa_var_get(in_id = 50999040, var_in = 0x000000010056dd64, lmt_lst = 0x00000001270baab0, nbr_dmn_fl = 0), line 584 in "nco_msa.c"
-      main@OL@1(??, ??, ??), line 651 in "ncbo.c"
-      ncbo -O -D 5 -v lat_var -p ~/nco/data in.nc in.nc ~/foo.nc
-      NetCDF: Index exceeds dimension bound
-      valgrind --leak-check=yes --show-reachable=yes --suppressions=${HOME}/nco/doc/valgrind.txt --tool=memcheck ncbo -O -D 5 -v lat_var -p ~/nco/data in.nc in.nc ~/foo.nc > ~/foo 2>&1
 nco987. 
 ************************************************************************
 End ncoXXX TODOs
