@@ -1,4 +1,4 @@
-# $Header: /data/zender/nco_20150216/nco/src/nco_c++/Makefile.old,v 1.91 2010-07-05 19:18:27 zender Exp $ -*-makefile-*-
+# $Header: /data/zender/nco_20150216/nco/src/nco_c++/Makefile.old,v 1.92 2010-08-31 19:03:28 zender Exp $ -*-makefile-*-
 
 # Purpose: Makefile for libnco_c++ module nco_c++
 # Requires GNU Make---AT&T Make chokes on GNU syntax
@@ -286,7 +286,7 @@ ifeq (${I18N},Y)
 endif
 
 ifeq (${NETCDF4},Y)
- CPPFLAGS += -DENABLE_NETCDF4
+ CPPFLAGS += -DENABLE_NETCDF4 -DHAVE_NETCDF4_H
 endif
 # endif NETCDF4
 
